--- a/style.css
+++ b/style.css
@@ -284,14 +284,15 @@ footer img {
 }
 
 /*logout.php*/
-body {
-    align-items: center;
-}
 .logout-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
     max-width: 400px;
     padding: 20px;
-    border: 1px solid #ccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     background-color: #fff;
 }
