--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 header {
     text-align: center;
-    padding-top: 80px; /* Reduced padding */
+    padding-top: 90px;
 }
 
 header img {
@@ -175,9 +175,9 @@ footer img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 10px;
+    padding: 20px 5px;
     z-index: 1000;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
 .logo_item {
@@ -186,7 +186,7 @@ footer img {
     column-gap: 10px;
     font-size: 22px;
     font-weight: 500;
-    color: #c0392b; /* Changed color to red */
+    color: #c0392b;
     margin-left: 5px;
 }
 
@@ -216,7 +216,7 @@ footer img {
 }
 
 .navbar_content a:hover {
-    color: #0052cc;
+    color: #c0392b;
 }
 
 /*button for login as */
@@ -268,8 +268,8 @@ footer img {
 }
 
 .profile-actions .button {
-    padding: 10px 20px;
-    background-color: #4070f4;
+    padding: 7px 20px;
+    background-color: #c0392b;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -281,6 +281,13 @@ footer img {
 
 .profile-actions .button:hover {
     background-color: #3050d4;
+}
+
+.profile-pic img {
+    width: 150px; /* Adjust the width as needed */
+    height: 150px; /* Adjust the height as needed */
+    border-radius: 50%;
+    margin-bottom: 10px;
 }
 
 /*logout.php*/
