--- a/style.css
+++ b/style.css
@@ -52,12 +52,13 @@ section {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    padding: 20px; /* Reduced padding */
-    margin: 60px auto 20px; /* Reduced margin */
+    padding: 20px;
+    margin-top: 100px;
+    margin: 60px auto 60px; 
 }
 
 .form-group {
-    margin-bottom: 10px; /* Reduced margin */
+    margin-bottom: 10px;
     margin-right: 20px;
 }
 
