--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 header {
     text-align: center;
-    padding-top: 90px;
+    padding-top: 100px;
 }
 
 header img {
@@ -21,8 +21,8 @@ header img {
 }
 
 header h1 {
-    margin-top: 10px; /* Reduced margin */
-    margin-bottom: 5px; /* Reduced margin */
+    margin-top: 10px;
+    margin-bottom: 5px;
     font-size: 2em;
 }
 
@@ -47,14 +47,13 @@ section {
 
 .form-section {
     width: 80%;
-    max-width: 400px;
+    max-width: 450px;
     text-align: center;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-top: 100px;
-    margin: 60px auto 60px; 
+    padding: 30px;
+    margin: 60px auto;
 }
 
 .form-group {
@@ -327,4 +326,15 @@ footer img {
 
 .logout-actions button:hover {
     background-color: #a93226;
+}
+
+.blood-section {
+    width: 80%;
+    max-width: 500px;
+    text-align: center;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    padding: 40px;
+    margin: 120px auto;
 }
