--- a/style.css
+++ b/style.css
@@ -338,3 +338,14 @@ footer img {
     padding: 40px;
     margin: 120px auto;
 }
+
+.edit-section {
+    width: 80%;
+    max-width: 450px;
+    text-align: center;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    margin: 100px auto;
+}
