staff_details.php otw

--- a/style.css
+++ b/style.css
@@ -349,3 +349,13 @@ footer img {
     padding: 30px;
     margin: 100px auto;
 }
+
+
+/*staff_details.php*/
+.staff-section {
+    margin-top: 20px;
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 5px;
+}
+
