--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
     padding: 0;
     background-color: white;
     color: #333;
-    background-image: none;
-    
+    background-image: url('blooddonor.jpeg');
+    background-size: cover;
 }
 
 header {
@@ -21,7 +21,7 @@ header img {
 }
 
 header h1 {
-    margin-top: 10px;
+    margin-top: 50px;
     margin-bottom: 5px;
     font-size: 2em;
 }
@@ -129,7 +129,14 @@ table th {
 }
 
 .reward {
+    width: 95%;
+    max-width: 1000px;
     text-align: center;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    margin: 100px auto;
 }
 
 .error {
